# eVTOLSim

./: CMakeLists.txt  README.md  main.cpp
src/: AlphaVehicle.cpp  AlphaVehicle.h  BravoVehicle.cpp  BravoVehicle.h  ChargerManager.cpp  ChargerManager.h  CharlieVehicle.cpp  CharlieVehicle.h  DeltaVehicle.cpp  DeltaVehicle.h  EchoVehicle.cpp  EchoVehicle.h  Event.h  SimulationController.cpp  SimulationController.h  StatisticsManager.cpp  StatisticsManager.h  Vehicle.cpp  Vehicle.h
tests/: test_chargermanager.cpp  test_statistics.cpp  test_vehicle.cpp
